@@ -49,41 +49,62 @@ configurations {
 }
 
 dependencies {
-    testImplementation "junit:junit:$junit_version"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    // Corda dependencies.
+    cordaProvided "org.jetbrains.kotlin:kotlin-stdlib:1.8.22"
     cordaProvided "$corda_core_release_group:corda-core:$corda_core_release_version"
-    corda  "$corda_release_group:corda:$corda_release_version"
-    testImplementation "$corda_release_group:corda-node-driver:$corda_release_version"
     cordaProvided group: 'com.google.guava', name: 'guava', version: '23.5-jre'
+
+    corda  "$corda_release_group:corda:$corda_release_version"
+
+    // Corda dependencies.
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "$corda_release_group:corda-node-driver:$corda_release_version"
 
 
     // CorDapp dependencies.
     cordapp project(":contracts")
 }
 
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
-    kotlinOptions {
-        languageVersion = "1.8"
-        apiVersion = "1.8"
-        jvmTarget = VERSION_11
-        javaParameters = true   // Useful for reflection.
-    }
+quasar {
+    excludePackages.addAll(
+            "antlr**",
+            "javax**",
+            "com.codahale**",
+            "com.fasterxml.**",
+            "com.github.benmanes.caffeine.**",
+            "com.google.**",
+            "com.lmax.**",
+            "com.zaxxer.**",
+            "net.bytebuddy**",
+            "io.github.classgraph**",
+            "io.netty*",
+            "liquibase**",
+            "net.i2p.crypto.**",
+            "nonapi.io.github.classgraph.**",
+            "org.apiguardian.**",
+            "org.bouncycastle**",
+            "org.codehaus.**",
+            "org.h2**",
+            "org.hibernate**",
+            "org.jboss.**",
+            "org.objenesis**",
+            "org.w3c.**",
+            "org.xml**",
+            "org.yaml**",
+            "kotlin**",
+            "rx**")
 }
 
 task integrationTest(type: Test, dependsOn: []) {
     testClassesDirs = sourceSets.integrationTest.output.classesDirs
     classpath = sourceSets.integrationTest.runtimeClasspath
+    jvmArgs test_add_opens
 }
 
 test {
-    jvmArgs = [  '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED',
-                 '--add-exports', 'javafx.base/com.sun.javafx=ALL-UNNAMED',
-                 '--add-exports', 'javafx.base/com.sun.javafx.collections=ALL-UNNAMED',
-                 '--add-opens', 'java.base/java.time=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED',
-                 '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.net=ALL-UNNAMED',
-                 '--add-opens', 'java.base/java.nio=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
-                 '--add-opens', 'java.base/java.security.cert=ALL-UNNAMED', '--add-opens', 'java.base/java.security=ALL-UNNAMED',
-                 '--add-opens', 'java.base/javax.net.ssl=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-                 '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED', '--add-opens', 'java.sql/java.sql=ALL-UNNAMED',]
+    jvmArgs test_add_opens
+}
+
+jar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
